--- a/package.json
+++ b/package.json
@@ -22,16 +22,19 @@
     "bcryptjs": "^2.4.3",
     "connect-flash": "^0.1.1",
     "ejs": "^3.1.2",
-    "express": "^4.17.1",
+    "emoji-picker-textarea": "^1.0.1",
+    "express": "^4.18.1",
     "express-ejs-layouts": "^2.5.0",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
+    "jquery.emojiarea.js": "^0.1.8-beta",
+    "live-server": "^1.2.2",
     "mongoose": "^5.9.11",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
-    "socket.io": "^2.4.0"
+    "socket.io": "^4.5.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.16"
   }
 }
